tests/golden/errors/traceback_nonascii_message.py
# Non-latin1 exception messages re-encode from PEP 393 code units to UTF-8.
raise ValueError("héllo wörld ✓")
